--- a/styles-v5/style-v6.css
+++ b/styles-v5/style-v6.css
@@ -33,12 +33,6 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-hr{
-    border: 1px dashed rgba(204, 204, 204, 0.26);
-    margin: 5px;
-    width: 90%;
-}
-
 .title{
     font-size: 30px;
     padding-top: 20px;
@@ -58,6 +52,12 @@ hr{
 }
 
 @media screen and (pointer: fine),screen and (pointer: coarse) and (min-device-width: 601px) {
+
+    hr{
+        border: 1px dashed rgba(204, 204, 204, 0.26);
+        margin: 5px;
+        width: 90%;
+    }
 
     #resetMenu{
         width: 225px;
@@ -114,6 +114,7 @@ hr{
     #zoom_image{
         object-fit: contain;
         max-width: 750px;
+        max-height: 90%;
         width: calc(100% - 50px);
         cursor: zoom-out;
     }
@@ -1053,7 +1054,7 @@ hr{
         color: #ffffffa0;
         font-size: 10px;
         padding-top: 5px;
-        margin: 0px 10px;
+        margin: 0px 5px;
         display: flex;
         align-items: center;
     }
@@ -1802,7 +1803,7 @@ hr{
         padding: 10px;
         border: none;
         border-radius: 5px;
-        margin: 0px 0px 10px 0px;
+        margin: 0px 0px 24px 0px;
         display: inline-flex;
         cursor: pointer;
         float: right;
